# raion

./: .gitignore  Cargo.toml  LICENSE  in.asm  in.rin  main.asm  main.rin  main.sin  out.asm  test.rasm
common/: Cargo.toml
common/src/: commands.rs  constants.rs  lib.rs  memory.rs  no_hash_hashmap.rs  register.rs  sin.rs
craion/: Cargo.toml
craion/src/: decoder.rs  executor.rs  instruction.rs  instruction_helper.rs  lib.rs  main.rs  memory.rs  procedure_container.rs  ret_stack.rs  section_manager.rs
craion/src/decoder/: argument.rs  instruction.rs
craion/src/decoder/instruction/: add.rs  arg.rs  call.rs  cmp.rs  div.rs  enter.rs  exit.rs  halt.rs  inc.rs  jacc.rs  jace.rs  jacn.rs  jacz.rs  jmc.rs  jme.rs  jmn.rs  jmp.rs  jmz.rs  larg.rs  leave.rs  mov.rs  mul.rs  outc.rs  pop.rs  push.rs  restr.rs  ret.rs  savr.rs  sub.rs
craion/src/executor/: argument_stack.rs  local_variables.rs  objects.rs  operand_stack.rs  registers.rs  return_stack.rs
craion/src/executor/objects/: heap_object.rs  type_heap.rs
craion/src/executor/registers/: flags.rs
craion/src/instruction/: loados.rs  local.rs  pushu64.rs  retl.rs
craion/src/memory/: address.rs
craion/tests/: add.rs  cmp.rs  instruction_helper.rs  mov.rs  pop.rs  push.rs  sub.rs
docs/v2/: rasm.md
examples/dev/: config.toml
proc/: Cargo.toml
proc/src/: lib.rs
raion/: Cargo.toml
raion/src/: compiler.rs  error.rs  lexer.rs  lib.rs  main.rs  manager.rs  token.rs
sin_reader/: Cargo.toml
src/: compiler.rs  decoder.rs  executor.rs  lexer.rs  main.rs  memory.rs  token.rs
tests/: cmp.rs
(+37 files in other folders)
