[package]
name = "craion"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
inline_colorization = "0.1.6"
lazy_static = "1.5.0"

[dependencies.xxhash-rust]
version = "0.8.12"
features = ["xxh3", "const_xxh3"]

[dependencies.common]
path = "../common"

[dependencies.proc]
path = "../proc"
